Obviate the ++...++ syntax